QtBeef/src/Qt/qtextlayout.bf

class QTextLayout : IQTextLayout
{
	private QTextLayout_Ptr* ptr;
	public void* ObjectPtr => ptr;
	public this()
	{
		this.ptr = CQt.QTextLayout_new();
	}
	public this(String text)
	{
		this.ptr = CQt.QTextLayout_new2(libqt_string(text));
	}
	public this(String text, IQFont font)
	{
		this.ptr = CQt.QTextLayout_new3(libqt_string(text), (.)font?.ObjectPtr);
	}
	public this(IQTextBlock b)
	{
		this.ptr = CQt.QTextLayout_new4((.)b?.ObjectPtr);
	}
	public this(String text, IQFont font, IQPaintDevice paintdevice)
	{
		this.ptr = CQt.QTextLayout_new5(libqt_string(text), (.)font?.ObjectPtr, (.)paintdevice?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QTextLayout_Delete(this.ptr);
	}
	public void SetFont(IQFont f)
	{
		CQt.QTextLayout_SetFont((.)this.ptr, (.)f?.ObjectPtr);
	}
	public QFont_Ptr* Font()
	{
		return CQt.QTextLayout_Font((.)this.ptr);
	}
	public void SetRawFont(IQRawFont rawFont)
	{
		CQt.QTextLayout_SetRawFont((.)this.ptr, (.)rawFont?.ObjectPtr);
	}
	public void SetText(String stringVal)
	{
		CQt.QTextLayout_SetText((.)this.ptr, libqt_string(stringVal));
	}
	public libqt_string Text()
	{
		return CQt.QTextLayout_Text((.)this.ptr);
	}
	public void SetTextOption(IQTextOption option)
	{
		CQt.QTextLayout_SetTextOption((.)this.ptr, (.)option?.ObjectPtr);
	}
	public QTextOption_Ptr* TextOption()
	{
		return CQt.QTextLayout_TextOption((.)this.ptr);
	}
	public void SetPreeditArea(c_int position, String text)
	{
		CQt.QTextLayout_SetPreeditArea((.)this.ptr, position, libqt_string(text));
	}
	public c_int PreeditAreaPosition()
	{
		return CQt.QTextLayout_PreeditAreaPosition((.)this.ptr);
	}
	public libqt_string PreeditAreaText()
	{
		return CQt.QTextLayout_PreeditAreaText((.)this.ptr);
	}
	public void SetFormats(void** overrides)
	{
		CQt.QTextLayout_SetFormats((.)this.ptr, overrides);
	}
	public void* Formats()
	{
		return CQt.QTextLayout_Formats((.)this.ptr);
	}
	public void ClearFormats()
	{
		CQt.QTextLayout_ClearFormats((.)this.ptr);
	}
	public void SetCacheEnabled(bool enable)
	{
		CQt.QTextLayout_SetCacheEnabled((.)this.ptr, enable);
	}
	public bool CacheEnabled()
	{
		return CQt.QTextLayout_CacheEnabled((.)this.ptr);
	}
	public void SetCursorMoveStyle(Qt_CursorMoveStyle style)
	{
		CQt.QTextLayout_SetCursorMoveStyle((.)this.ptr, style);
	}
	public Qt_CursorMoveStyle CursorMoveStyle()
	{
		return CQt.QTextLayout_CursorMoveStyle((.)this.ptr);
	}
	public void BeginLayout()
	{
		CQt.QTextLayout_BeginLayout((.)this.ptr);
	}
	public void EndLayout()
	{
		CQt.QTextLayout_EndLayout((.)this.ptr);
	}
	public void ClearLayout()
	{
		CQt.QTextLayout_ClearLayout((.)this.ptr);
	}
	public QTextLine_Ptr* CreateLine()
	{
		return CQt.QTextLayout_CreateLine((.)this.ptr);
	}
	public c_int LineCount()
	{
		return CQt.QTextLayout_LineCount((.)this.ptr);
	}
	public QTextLine_Ptr* LineAt(c_int i)
	{
		return CQt.QTextLayout_LineAt((.)this.ptr, i);
	}
	public QTextLine_Ptr* LineForTextPosition(c_int pos)
	{
		return CQt.QTextLayout_LineForTextPosition((.)this.ptr, pos);
	}
	public bool IsValidCursorPosition(c_int pos)
	{
		return CQt.QTextLayout_IsValidCursorPosition((.)this.ptr, pos);
	}
	public c_int NextCursorPosition(c_int oldPos)
	{
		return CQt.QTextLayout_NextCursorPosition((.)this.ptr, oldPos);
	}
	public c_int PreviousCursorPosition(c_int oldPos)
	{
		return CQt.QTextLayout_PreviousCursorPosition((.)this.ptr, oldPos);
	}
	public c_int LeftCursorPosition(c_int oldPos)
	{
		return CQt.QTextLayout_LeftCursorPosition((.)this.ptr, oldPos);
	}
	public c_int RightCursorPosition(c_int oldPos)
	{
		return CQt.QTextLayout_RightCursorPosition((.)this.ptr, oldPos);
	}
	public void Draw(IQPainter p, IQPointF pos)
	{
		CQt.QTextLayout_Draw((.)this.ptr, (.)p?.ObjectPtr, (.)pos?.ObjectPtr);
	}
	public void DrawCursor(IQPainter p, IQPointF pos, c_int cursorPosition)
	{
		CQt.QTextLayout_DrawCursor((.)this.ptr, (.)p?.ObjectPtr, (.)pos?.ObjectPtr, cursorPosition);
	}
	public void DrawCursor2(IQPainter p, IQPointF pos, c_int cursorPosition, c_int width)
	{
		CQt.QTextLayout_DrawCursor2((.)this.ptr, (.)p?.ObjectPtr, (.)pos?.ObjectPtr, cursorPosition, width);
	}
	public QPointF_Ptr* Position()
	{
		return CQt.QTextLayout_Position((.)this.ptr);
	}
	public void SetPosition(IQPointF p)
	{
		CQt.QTextLayout_SetPosition((.)this.ptr, (.)p?.ObjectPtr);
	}
	public QRectF_Ptr* BoundingRect()
	{
		return CQt.QTextLayout_BoundingRect((.)this.ptr);
	}
	public double MinimumWidth()
	{
		return CQt.QTextLayout_MinimumWidth((.)this.ptr);
	}
	public double MaximumWidth()
	{
		return CQt.QTextLayout_MaximumWidth((.)this.ptr);
	}
	public void* GlyphRuns()
	{
		return CQt.QTextLayout_GlyphRuns((.)this.ptr);
	}
	public void SetFlags(c_int flags)
	{
		CQt.QTextLayout_SetFlags((.)this.ptr, flags);
	}
	public c_int NextCursorPosition2(c_int oldPos, QTextLayout_CursorMode mode)
	{
		return CQt.QTextLayout_NextCursorPosition2((.)this.ptr, oldPos, mode);
	}
	public c_int PreviousCursorPosition2(c_int oldPos, QTextLayout_CursorMode mode)
	{
		return CQt.QTextLayout_PreviousCursorPosition2((.)this.ptr, oldPos, mode);
	}
	public void Draw3(IQPainter p, IQPointF pos, void** selections)
	{
		CQt.QTextLayout_Draw3((.)this.ptr, (.)p?.ObjectPtr, (.)pos?.ObjectPtr, selections);
	}
	public void Draw4(IQPainter p, IQPointF pos, void** selections, IQRectF clip)
	{
		CQt.QTextLayout_Draw4((.)this.ptr, (.)p?.ObjectPtr, (.)pos?.ObjectPtr, selections, (.)clip?.ObjectPtr);
	}
	public void* GlyphRuns1(c_int from)
	{
		return CQt.QTextLayout_GlyphRuns1((.)this.ptr, from);
	}
	public void* GlyphRuns2(c_int from, c_int length)
	{
		return CQt.QTextLayout_GlyphRuns2((.)this.ptr, from, length);
	}
}
interface IQTextLayout : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextLine
// --------------------------------------------------------------
[CRepr]
struct QTextLine_Ptr: void
{
}
extension CQt
{
	[LinkName("QTextLine_new")]
	public static extern QTextLine_Ptr* QTextLine_new(QTextLine_Ptr* other);
	[LinkName("QTextLine_new2")]
	public static extern QTextLine_Ptr* QTextLine_new2(QTextLine_Ptr* other);
	[LinkName("QTextLine_new3")]
	public static extern QTextLine_Ptr* QTextLine_new3();
	[LinkName("QTextLine_Delete")]
	public static extern void QTextLine_Delete(QTextLine_Ptr* self);
	[LinkName("QTextLine_IsValid")]
	public static extern bool QTextLine_IsValid(QTextLine_Ptr* self);
	[LinkName("QTextLine_Rect")]
	public static extern QRectF_Ptr* QTextLine_Rect(QTextLine_Ptr* self);
	[LinkName("QTextLine_X")]
	public static extern double QTextLine_X(QTextLine_Ptr* self);
	[LinkName("QTextLine_Y")]
	public static extern double QTextLine_Y(QTextLine_Ptr* self);
	[LinkName("QTextLine_Width")]
	public static extern double QTextLine_Width(QTextLine_Ptr* self);
	[LinkName("QTextLine_Ascent")]
	public static extern double QTextLine_Ascent(QTextLine_Ptr* self);
	[LinkName("QTextLine_Descent")]
	public static extern double QTextLine_Descent(QTextLine_Ptr* self);
	[LinkName("QTextLine_Height")]
	public static extern double QTextLine_Height(QTextLine_Ptr* self);
	[LinkName("QTextLine_Leading")]
	public static extern double QTextLine_Leading(QTextLine_Ptr* self);
	[LinkName("QTextLine_SetLeadingIncluded")]
	public static extern void QTextLine_SetLeadingIncluded(QTextLine_Ptr* self, bool included);
	[LinkName("QTextLine_LeadingIncluded")]
	public static extern bool QTextLine_LeadingIncluded(QTextLine_Ptr* self);
	[LinkName("QTextLine_NaturalTextWidth")]
	public static extern double QTextLine_NaturalTextWidth(QTextLine_Ptr* self);
	[LinkName("QTextLine_HorizontalAdvance")]
	public static extern double QTextLine_HorizontalAdvance(QTextLine_Ptr* self);
	[LinkName("QTextLine_NaturalTextRect")]
	public static extern QRectF_Ptr* QTextLine_NaturalTextRect(QTextLine_Ptr* self);
	[LinkName("QTextLine_CursorToX")]
	public static extern double QTextLine_CursorToX(QTextLine_Ptr* self, c_int* cursorPos);
	[LinkName("QTextLine_CursorToX2")]
	public static extern double QTextLine_CursorToX2(QTextLine_Ptr* self, c_int cursorPos);
	[LinkName("QTextLine_XToCursor")]
	public static extern c_int QTextLine_XToCursor(QTextLine_Ptr* self, double x);
	[LinkName("QTextLine_SetLineWidth")]
	public static extern void QTextLine_SetLineWidth(QTextLine_Ptr* self, double width);
	[LinkName("QTextLine_SetNumColumns")]
	public static extern void QTextLine_SetNumColumns(QTextLine_Ptr* self, c_int columns);
	[LinkName("QTextLine_SetNumColumns2")]
	public static extern void QTextLine_SetNumColumns2(QTextLine_Ptr* self, c_int columns, double alignmentWidth);
	[LinkName("QTextLine_SetPosition")]
	public static extern void QTextLine_SetPosition(QTextLine_Ptr* self, QPointF_Ptr* pos);
	[LinkName("QTextLine_Position")]
	public static extern QPointF_Ptr* QTextLine_Position(QTextLine_Ptr* self);
	[LinkName("QTextLine_TextStart")]
	public static extern c_int QTextLine_TextStart(QTextLine_Ptr* self);
	[LinkName("QTextLine_TextLength")]
	public static extern c_int QTextLine_TextLength(QTextLine_Ptr* self);
	[LinkName("QTextLine_LineNumber")]
	public static extern c_int QTextLine_LineNumber(QTextLine_Ptr* self);
	[LinkName("QTextLine_Draw")]
	public static extern void QTextLine_Draw(QTextLine_Ptr* self, QPainter_Ptr** painter, QPointF_Ptr* position);
	[LinkName("QTextLine_GlyphRuns")]
	public static extern void* QTextLine_GlyphRuns(QTextLine_Ptr* self);
	[LinkName("QTextLine_CursorToX22")]
	public static extern double QTextLine_CursorToX22(QTextLine_Ptr* self, c_int* cursorPos, QTextLine_Edge edge);
	[LinkName("QTextLine_CursorToX23")]
	public static extern double QTextLine_CursorToX23(QTextLine_Ptr* self, c_int cursorPos, QTextLine_Edge edge);
	[LinkName("QTextLine_XToCursor2")]
	public static extern c_int QTextLine_XToCursor2(QTextLine_Ptr* self, double x, QTextLine_CursorPosition param2);
	[LinkName("QTextLine_GlyphRuns1")]
	public static extern void* QTextLine_GlyphRuns1(QTextLine_Ptr* self, c_int from);
	[LinkName("QTextLine_GlyphRuns2")]
	public static extern void* QTextLine_GlyphRuns2(QTextLine_Ptr* self, c_int from, c_int length);
}
